[package]
name = "eip1962-evmc"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "eip1962"
crate-type = ["staticlib", "cdylib"]

[dependencies]
evmc-sys = "7.1"
evmc-vm = "7.1"
evmc-declare = "7.1"
# 0.2.0
eth_pairings = { git = "https://github.com/matter-labs/eip1962", rev = "6a06b44cd8d5dd9265480312a08b4a7c69fbbbe0" }
